# Cleopatra

./: .gitignore  meson.build
debug/: build.ninja  compile_commands.json
debug/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-dependencies.json  intro-install_plan.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  intro-tests.json  meson-info.json
debug/meson-logs/: meson-log.txt
debug/meson-private/: cmd_line.txt
notes/: Header.md
src/: Cleopatra.vala  meson.build
src/core/: Header.vala  HeaderList.vala  InternetAddress.vala  InternetAddressList.vala  Serializable.vala  meson.build
src/gmime/: GMimeHeader.vala  GMimeHeaderSet.vala  GMimeInternetAddress.vala  GMimeInternetAddressList.vala  GMimeMessageHeader.vala  meson.build
subprojects/: gmime-3.0.wrap
tests/: cleopatra_test.vala  meson.build
